--- a/ahorcado.html
+++ b/ahorcado.html
@@ -35,12 +35,12 @@
 				<div class="modal-contenido">
 					<span id="btnCerrarModal" class="cerrar">&times;</span>
 					<h2>Instrucciones</h2>
-					<p>LO QUE QUIERAS PONER</p>
-					<p>LO QUE QUIERAS PONER</p>
-					<p>LO QUE QUIERAS PONER</p>
-					<p>LO QUE QUIERAS PONER</p>
+					<p>- RESUELVE LA PALABRA PARA SOBREVIVIR</p>
+					<p>- HAZ CLICK EN LA LETRA QUE QUIERAS RESOLVER</p>
+					<p>- TIENES 6 INTENTOS</p>
+					<p>- PULSA EL BOTÓN PARA BUSCAR UNA PALABRA NUEVA</p>
 				</div>
-			</div>
+			</div> 
 
 				<h1 id="msg-final"></h1>
 				<h2 id="acierto"></h2>
