--- a/ahorcado.html
+++ b/ahorcado.html
@@ -4,7 +4,7 @@
 <html lang="es">
 	<head>
 		<meta charset="utf-8">
-		<title>Juego Ahorcado</title>
+		<title>Misión: Sobrevivir</title>
 		<link rel="stylesheet" href="css/ahorcado.css">	
 		<script type= "text/javascript" src="js/ahorcado.js" defer></script>	
 	</head>
@@ -38,7 +38,7 @@
 					<p>- RESUELVE LA PALABRA PARA SOBREVIVIR</p>
 					<p>- HAZ CLICK EN LA LETRA QUE QUIERAS RESOLVER</p>
 					<p>- TIENES 6 INTENTOS</p>
-					<p>- PULSA EL BOTÓN PARA BUSCAR UNA PALABRA NUEVA</p>
+					<p>- PULSA EL BOTÓN PARA RESOLVER UNA PALABRA NUEVA</p>
 				</div>
 			</div> 
 
