--- a/ahorcado.html
+++ b/ahorcado.html
@@ -4,13 +4,13 @@
 <html lang="es">
 	<head>
 		<meta charset="utf-8">
-		<title>Misión: Sobrevivir</title>
+		<title>Juego del ahorcado</title>
 		<link rel="stylesheet" href="css/ahorcado.css">	
 		<script type= "text/javascript" src="js/ahorcado.js" defer></script>	
 	</head>
 	<body onload = "inicio()">	
 
-			<h1 class="titulo">Juego del Ahorcado</h1>
+			<h1 class="titulo">Misión: SOBREVIVIR</h1>
 			<img class = "pajaro" src = "img/superman.gif">
 			<div class="main-container">
 
