--- a/ahorcado.html
+++ b/ahorcado.html
@@ -31,6 +31,7 @@
 			</div>
 
 			<!-- MODAL -->
+			<!--Botón de ayuda-->
 			<div id="modalInstrucciones" class="modal">
 				<div class="modal-contenido">
 					<span id="btnCerrarModal" class="cerrar">&times;</span>
